# agente-de-ia-juridico

./: .env.example  .gitignore  COMO-USAR-PDFs.md  DEPLOY.md  README.md  alembic.ini  app.js  audit-api-config.js  audit-data.json  auth-config.js  auth-gate.js  guia.css  index.html  pyproject.toml  render.yaml
.cursor/: mcp.json
audit-portal/: .env.example  README.md
deploy/: Dockerfile  deploy.sh  docker-compose.yml  manifest-fase-0.yaml
docs/: README.md  plan-firma-penal-victimas.md  plan-rag-openai-managed-colombia.md  plan-rag-openai-managed.md  plan-rediseno-firma.md
migrations/: env.py
scripts/: _build_pasos_matrix.py  aplicar_remediacion_guardrails.py  auditar_pasos_skills_gerencia.py  auditoria_10_expertos_hosting.py  auditoria_20_expertos_hosting.py  enriquecer_skills_md.py  generar_audit_portal.py  generar_documento_unico_aprobacion.py  hash_site_password.py  ingest_kb.py  local_db.sh  ocr-pdf.sh  purge_retention.py  refinar_skills_fase2_fase3.py  restore_audit_progress.py  setup-github.sh  smoke_audit_login.py  smoke_produccion.sh  smoke_slack_hitl_drafts.py  start-audit-portal.sh  start-local.sh  validacion_sistema_completa.sh  validar_skills_metricas.py  validate_fase0.py
src/: __init__.py  config.py  main.py  security.py
static/: GUIA_FASE0.html  GUIA_FASE1.html  auth.js  chat.css  chat.js  desk-soporte.js  desk.css  firma.js  index.html  login.html  login.js  report.js  toast.js  validation-tests.js  workspace.js
tests/: conftest.py  test_access_control.py  test_api_docs_surface.py  test_audit_catalog_api.py  test_audit_portal_api.py  test_audit_progress_merge.py  test_audit_skill_context.py  test_auth.py  test_compliance.py  test_compliance_arco_retention.py  test_conversation.py  test_crypto_at_rest.py  test_desk.py  test_execution_plan.py  test_execution_plan_sse.py  test_fase0.py  test_fase3_plan_product.py  test_faseb.py  test_faseb2.py  test_firma.py  test_message_content.py  test_plan_security.py  test_prod_followups.py  test_rag.py  (+8 more)
(+372 files in other folders)
