[project]
name = "agente-juridico"
version = "0.1.0"
description = "Asistente jurídico multi-agente — Fase 0 (Slack + WhatsApp)"
requires-python = ">=3.11"
dependencies = [
    "openai-agents>=0.0.14",
    "openai>=1.68.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "slack-bolt>=1.22.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "redis>=5.2.0",
    "twilio>=9.4.0",
    "pydantic-settings>=2.7.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "pytest-asyncio>=0.25.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
